# dadata_intergity

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  start.py  start_local.sh  tree.txt
config/: config.py  docs.py  essentials.py  gunicorn.conf.py  logginf_conf.py  settings.py  urls.py
config/swagger/: schema.py
devices/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
devices/management/commands/: csu.py
devices/migrations/: 0001_initial.py  0002_alter_device_options_alter_devicemodel_options.py
devices/static/admin/js/: dadata_suggestions.js
devices/templates/admin/devices/device/: change_form.html
devices/utils/: validtors.py
registration/: models.py  serializers.py  urls.py  utils.py  views.py
registration/migrations/: 0001_initial.py  0002_alter_usermodel_username.py  0003_alter_usermodel_username.py
staticfiles/admin/css/: dadata_suggestions.css
tests/devices/: test_devicec_models.py  test_devices_serializers.py  test_devices_urls.py  test_devices_views.py
tests/registration/: test_register_models.py  test_register_serializers.py  test_register_views.py
